#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ(2.60)
AC_INIT(rgb2yuv-intrinsics, 0.1, natisof18@hotmail.com)
AC_CONFIG_SRCDIR([rgb2yuv-intrinsics.c])
#AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(rgb2yuv-intrinsics, main)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
AM_PROG_LIBTOOL

# Set shared libraries
AC_DISABLE_STATIC
AC_ENABLE_SHARED

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
